--- a/ParkingManagement/Properties/Resources.resx
+++ b/ParkingManagement/Properties/Resources.resx
@@ -145,8 +145,8 @@
   <data name="refersh242" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\refersh24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="stande1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\stande.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Employees1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\Employees.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="saveExcel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\saveExcel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,8 +160,8 @@
   <data name="save24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\save24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="capacity" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\capacity.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="979713" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\979713.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="parkingcar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\parkingcar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -171,12 +171,6 @@
   </data>
   <data name="panel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\panel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ManageVehicle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\ManageVehicle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="search24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\search24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="doc-left1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\doc-left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,17 +190,26 @@
   <data name="delete24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\delete24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="createuser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\createuser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Notification" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\Notification.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="979713" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\979713.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="stande pro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\stande pro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TicketPrice" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\TicketPrice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="142_1340441927_bSook.jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\142_1340441927_bSook.jpg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="createuser" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\createuser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="9835784" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\9835784.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="newfile24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\newfile24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stande1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\stande.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="VehicleType" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\VehicleType.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -232,8 +235,8 @@
   <data name="parkingslot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\parkingslot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="stande pro" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\stande pro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ManageVehicle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\ManageVehicle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Statistics24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\Statistics24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -247,11 +250,11 @@
   <data name="exit_car" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\exit_car.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Employees1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\Employees.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="capacity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\capacity.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="142_1340441927_bSook.jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\142_1340441927_bSook.jpg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\search24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="refersh24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\refersh24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -268,8 +271,8 @@
   <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="newfile24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\newfile24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TicketPrice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\TicketPrice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ManagePay" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\ManagePay.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -280,7 +283,7 @@
   <data name="sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\sign.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="9835784" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\9835784.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Untitled-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Untitled-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
